5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1577_1332.log
== TEST (2019-03-21 19:10:41) 
-- CODE:
aresta =6
area = 3/2(3*6**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*6**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:10:45) 
-- CODE:
aresta =6
area = 3/2(3*6**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*6**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:10:45) 
-- CODE:
aresta =6
area = 3/2(3*6**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*6**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:15) 
-- CODE:
aresta =6
area = 3/2*3**0.5*a*a)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3**0.5*a*a)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:13:16) 
-- CODE:
aresta =6
area = 3/2*3**0.5*a*a)
 
print(round(area, 4))
-- EXECUTION TIME:
0.199781
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 3/2*3**0.5*a*a)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:24) 
-- CODE:
a =6
area = 3/2*3**0.5*a*a)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3**0.5*a*a)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:36) 
-- CODE:
a =6
area = 3/2*3**0.5*a*a)
 
print(round(area, 4 ))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3**0.5*a*a)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:54) 
-- CODE:
a =6
area = 3/2*3**0.5*a*a
 
print(round(area, 4 ))
-- OUTPUT:
93.5307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:14:00) 
-- CODE:
a =6
area = 3/2*3**0.5*a*a
 
print(round(area, 4 ))
-- EXECUTION TIME:
0.229311
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
93.5307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:15) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4 ))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:14:18) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4 ))
-- EXECUTION TIME:
0.143245
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
